--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browser-sync": "^2.11.2",
+    "browserify": "^13.0.0",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
-    "gulp-live-server": "0.0.29"
+    "gulp-live-server": "0.0.29",
+    "react": "^15.0.1",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
